# jub-client

./: .env  .env.dev  .gitignore  CONTRIBUTING.md  LICENSE  README.md  deploy.sh  jub-api.yml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: 3-task.yml
.github/workflows/: publish_docs.yml  run_test.yml
docs/: api-reference.md  api_deployment.md  data-model.md  data_model.md  deployment.md  getting-started.md  index.md  installation.md  usage_examples.md
docs/user-guide/: installation.md  usage_examples.md
examples/: 01_create_observatory.py  02_create_catalog.py  03_create_products.py
examples/basics/: catalogs.json  main.py
examples/use-cases/: .env  .env.prod  1_full_observatory_setup.py  2_catalog_indexing.py  3_product_indexing.py  4_datasource_and_records.py  5_service_indexing.py  README.md  catalogs.json  records.json
examples/v1/: 02_create_catalog.py
examples/v2/: catalogs.json  create_catalog_from_json.py  create_datasource.py  data_records.json  seed_client.md  seed_client.py
jub/: __init__.py  client.py
jub/config/: __init__.py
jub/dto/: __init__.py  v2.py
jub/enums/: __init__.py
jub/log/: __init__.py
jub/utils/: utils.py
tests/: test_client.py  test_client_services.py  test_unit_client.py
tests/client/: test_catalog_client.py  test_observatory_client.py  test_product_client.py
tests/data/: catalog.json
tests/models/: test_catalog.py  test_filter.py  test_observatory.py  test_product.py
tests/v1/: test_catalog.py  test_client.py  test_filter.py  test_observatory.py  test_product.py
tests/v2/: test_client.py
(+26 files in other folders)
